[gd_scene load_steps=12 format=2]

[ext_resource path="res://seu/Player.gd" type="Script" id=1]
[ext_resource path="res://seu/assets/sounds/hit.wav" type="AudioStream" id=2]
[ext_resource path="res://seu/assets/sounds/letter.wav" type="AudioStream" id=3]
[ext_resource path="res://seu/assets/player1.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 12, 12, 12 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 12, 12, 12, 12 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 3 )
random_pitch = 1.05

[node name="Player" type="RigidBody2D"]
collision_layer = 2
gravity_scale = 0.0
linear_damp = 30.0
angular_damp = 4.0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2.64296, 2.64296 )
frames = SubResource( 3 )
speed_scale = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
pitch_scale = 1.6

[node name="PlayerLetter" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 2 )
volume_db = -15.0
pitch_scale = 1.4

[node name="PlayerLetter2" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 2 )
volume_db = -15.0
pitch_scale = 1.4
